devops/kubernetes/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: #{NAME}#-#{ENV}#
  labels:
    site: #{NAME}#-#{ENV}#
