devops/kubernetes/02-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: #{NAME}#-#{ENV}#
  namespace: #{NAME}#-#{ENV}#
  labels:
    site: #{NAME}#-#{ENV}#
  # annotations:
  #   prometheus.io/scrape: "true"
  #   prometheus.io/port: "3000"
spec:
  selector:
    app: #{NAME}#-#{ENV}#
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000 #Pod Port
---
