devops/kubernetes/03-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #{NAME}#-#{ENV}#
  namespace: #{NAME}#-#{ENV}#
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16m
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.#{DOMAIN}#' ) {
        rewrite ^ https://#{DOMAIN}#$request_uri permanent;
      }
#ALTERNATEDOMAINSNIPPET

spec:
  tls:
  - hosts:
    - 'www.#{DOMAIN}#'
    - '#{DOMAIN}#'
    #ALTERNATEDOMAINHOST

    secretName: #{NAME}#-#{ENV}#
  rules:
  - host: '#{DOMAIN}#'
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: #{NAME}#-#{ENV}#
              port:
                number: 3000
  - host: 'www.#{DOMAIN}#'
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: #{NAME}#-#{ENV}#
              port:
                number: 3000
#ALTERNATEDOMAINRULES
